# rust-book-exercise

./: .gitignore  Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
cap8-vector/: Cargo.toml
cap8-vector/src/: main.rs
closures/src/: lib.rs  main.rs
communicator/src/: lib.rs
enum_and_pattern/src/: main.rs
error-handling/: .env
error-handling/src/: hello.txt  main.rs
fearless_concurrency/src/: main.rs
generic_types/src/: main.rs
guessing_game/src/: main.rs
iterators/src/: lib.rs  main.rs
lifetime_generics/: Cargo.toml
lifetime_generics/src/: main.rs
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
mod-organize/: Cargo.toml
mod-organize/src/: lib.rs
pattern_and_matching/src/: main.rs
reference_cycle/src/: lib.rs  main.rs
small-web-server/: 404.html  Cargo.toml
small-web-server/src/: lib.rs  main.rs
smart_pointers/src/: lib.rs  main.rs
traits_impl/: Cargo.toml
traits_impl/src/: main.rs
