[workspace]

members = [
  "adder",
  "cap8-vector",
  "closures",
  "communicator",
  "enum_and_pattern",
  "error-handling",
  "generic_types",
  "guessing_game",
  "iterators",
  "lifetime_generics",
  "minigrep",
  "mod-organize",
  "traits_impl",
  "smart_pointers",
  "reference_cycle",
  "fearless_concurrency",
  "pattern_and_matching",
  "small-web-server"
]
